--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 
-<link rel="stylesheet" type="text/css" href="DBSU.css">
+<link rel="stylesheet" type="text/css" href="index.css">
 <link rel="icon" type="image/ico" href="Zen'ou.ico">
 
 <title>Dragon Ball Super Univerzumi</title>
